--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "jquery-circle-progress": "^1.2.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-circle": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
