--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4",
